--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main class="contenedor">
     <section class="productos">
       <div class="producto">
-        <h2>Producto 1</h2>
+        <h2>Zanahorias</h2>
         <div class="producto-box">
           <img src="img/foto1.jpg" alt="Producto 1" />
           <button onclick="ventaInstantanea('Producto 1', 50)">Comprar</button>
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="producto">
-        <h2>Producto 2</h2>
+        <h2>Manzana</h2>
         <div class="producto-box">
           <img src="img/foto2.jpg" alt="Producto 2" />
           <button onclick="ventaInstantanea('Producto 2', 30)">Comprar</button>
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="producto">
-        <h2>Producto 3</h2>
+        <h2>Pera</h2>
         <div class="producto-box">
           <img src="img/foto3.jpg" alt="Producto 3" />
           <button onclick="ventaInstantanea('Producto 3', 20)">Comprar</button>
@@ -52,7 +52,7 @@
       </div>
       <!-- Añade productos 4 a 9 aquí igual que antes -->
       <div class="producto">
-        <h2>Producto 4</h2>
+        <h2>Lechuga Romana</h2>
         <div class="producto-box">
           <img src="img/foto4.jpg" alt="Producto 4" />
           <button onclick="ventaInstantanea('Producto 4', 15)">Comprar</button>
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="producto">
-        <h2>Producto 5</h2>
+        <h2>Lechuga</h2>
         <div class="producto-box">
           <img src="img/foto5.jpg" alt="Producto 5" />
           <button onclick="ventaInstantanea('Producto 5', 25)">Comprar</button>
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="producto">
-        <h2>Producto 6</h2>
+        <h2>Cebolla</h2>
         <div class="producto-box">
           <img src="img/foto6.jpg" alt="Producto 6" />
           <button onclick="ventaInstantanea('Producto 6', 40)">Comprar</button>
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="producto">
-        <h2>Producto 7</h2>
+        <h2>Pepino</h2>
         <div class="producto-box">
           <img src="img/foto7.jpg" alt="Producto 7" />
           <button onclick="ventaInstantanea('Producto 7', 18)">Comprar</button>
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="producto">
-        <h2>Producto 8</h2>
+        <h2>Tomate</h2>
         <div class="producto-box">
           <img src="img/foto8.jpg" alt="Producto 8" />
           <button onclick="ventaInstantanea('Producto 8', 12)">Comprar</button>
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="producto">
-        <h2>Producto 9</h2>
+        <h2>Bananas</h2>
         <div class="producto-box">
           <img src="img/foto9.jpg" alt="Producto 9" />
           <button onclick="ventaInstantanea('Producto 9', 35)">Comprar</button>
